--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My Cafeteria</title>
 </head>
 <body>
-    
+    <h1>Welcome to My Cafeteria</h1>
+    <p>Enjoy our delicious food and beverages in a cozy atmosphere. Please explore our <a href="menu">menu</a> and savor the flavors!</p>
 </body>
 </html>
